--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           </div>
           <h1 class="text-primary name-text" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50"
             data-aos-duration="900" data-aos-once="true">
-            Mohamed Asif
+            Mohamed Ashif
           </h1>
           <h5 class="text-muted pro-text" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50"
             data-aos-duration="900" data-aos-once="true">
