--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
       <div class="col-md-8 pro m-3 shadow" data-aos="fade-up" data-aos-duration="1500" data-aos-once="true">
         <div class="row">
           <div class="col-md-6 bg-pro">
-            <img src="./images/clg.JPG" alt="3D Architectural Model of My Campus" />
+            <img src="./images/clg.jpg" alt="3D Architectural Model of My Campus" />
           </div>
           <div class="col-md-6 content-pro p-3 bg-light">
             <div class="content-pro-top">
