--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <a class="navbar-brand" href="./">
       
       <img src="./images/1.png" width="30" height="30" class="d-inline-block align-top">
-      Mohamed Ashif
+      Mohamed Ashif. J
       
     </a>
 
@@ -138,7 +138,7 @@
           </div>
           <h1 class="text-primary name-text" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50"
             data-aos-duration="900" data-aos-once="true">
-            Mohamed Ashif
+            Mohamed Ashif.J
           </h1>
           <h5 class="text-muted pro-text" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50"
             data-aos-duration="900" data-aos-once="true">
