--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     data-aos-duration="500">
     <a class="navbar-brand" href="./">
       
-      <img src="./images/1.png" width="30" height="30" class="d-inline-block align-top">
+      <img src="./images/ab.png" width="30" height="30" class="d-inline-block align-top">
       Mohamed Ashif. J
       
     </a>
